--- a/src/app/modules/proveedores/pages/listar-proveedores/listar-proveedores.html
+++ b/src/app/modules/proveedores/pages/listar-proveedores/listar-proveedores.html
@@ -55,6 +55,11 @@
                             </td>
                             <td>
                                 <div class="d-flex gap-2">
+                                    <button class="btn btn-sm btn-primary" (click)="editarProveedor(proveedor, $event)" title="Editar Proveedor">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-edit-icon lucide-edit">
+                                            <path d="M17 3a2.828 2.828 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5L17 3z"></path>
+                                        </svg>
+                                    </button>
                                     <button class="btn btn-sm btn-info" (click)="verFacturasProveedor(proveedor, $event)" title="Ver Facturas/Ingresos">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-package-search-icon lucide-package-search"><path d="M21 10V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l2-1.14"/><path d="m7.5 4.27 9 5.15"/><polyline points="3.29 7 12 12 20.71 7"/><line x1="12" x2="12" y1="22" y2="12"/><circle cx="18.5" cy="15.5" r="2.5"/><path d="M20.27 17.27 22 19"/></svg>
                                     </button>
